@@ -110,9 +110,10 @@ public class SecureAction
         getAccessor(URL.class);
     }
 
-    private static final ThreadLocal m_actions = new ThreadLocal()
+    private static final ThreadLocal<Actions> m_actions = new ThreadLocal<Actions>()
     {
-        public Object initialValue()
+        @Override
+		public Actions initialValue()
         {
             return new Actions();
         }
@@ -206,7 +207,7 @@ public class SecureAction
         }
     }
 
-    public ClassLoader getClassLoader(Class clazz)
+    public ClassLoader getClassLoader(Class<?> clazz)
     {
         if (System.getSecurityManager() != null)
         {
@@ -227,7 +228,7 @@ public class SecureAction
         }
     }
 
-    public Class forName(String name, ClassLoader classloader) throws ClassNotFoundException
+    public Class<?> forName(String name, ClassLoader classloader) throws ClassNotFoundException
     {
         if (System.getSecurityManager() != null)
         {
@@ -235,7 +236,7 @@ public class SecureAction
             {
                 Actions actions = (Actions) m_actions.get();
                 actions.set(Actions.FOR_NAME_ACTION, name, classloader);
-                return (Class) AccessController.doPrivileged(actions, m_acc);
+                return (Class<?>) AccessController.doPrivileged(actions, m_acc);
             }
             catch (PrivilegedActionException ex)
             {
@@ -266,7 +267,7 @@ public class SecureAction
             {
                 Actions actions = (Actions) m_actions.get();
                 actions.set(Actions.CREATE_URL_ACTION, protocol, host,
-                    new Integer(port), path, handler);
+                    Integer.valueOf(port), path, handler);
                 return (URL) AccessController.doPrivileged(actions, m_acc);
             }
             catch (PrivilegedActionException ex)
@@ -361,8 +362,7 @@ public class SecureAction
             {
                 Actions actions = (Actions) m_actions.get();
                 actions.set(Actions.FILE_EXISTS_ACTION, file);
-                return ((Boolean) AccessController.doPrivileged(actions, m_acc))
-                    .booleanValue();
+                return ((Boolean) AccessController.doPrivileged(actions, m_acc));
             }
             catch (PrivilegedActionException ex)
             {
@@ -383,8 +383,7 @@ public class SecureAction
             {
                 Actions actions = (Actions) m_actions.get();
                 actions.set(Actions.FILE_IS_FILE_ACTION, file);
-                return ((Boolean) AccessController.doPrivileged(actions, m_acc))
-                        .booleanValue();
+                return ((Boolean) AccessController.doPrivileged(actions, m_acc));
             }
             catch (PrivilegedActionException ex)
             {
@@ -405,8 +404,7 @@ public class SecureAction
             {
                 Actions actions = (Actions) m_actions.get();
                 actions.set(Actions.FILE_IS_DIRECTORY_ACTION, file);
-                return ((Boolean) AccessController.doPrivileged(actions, m_acc))
-                    .booleanValue();
+                return ((Boolean) AccessController.doPrivileged(actions, m_acc));
             }
             catch (PrivilegedActionException ex)
             {
@@ -427,8 +425,7 @@ public class SecureAction
             {
                 Actions actions = (Actions) m_actions.get();
                 actions.set(Actions.MAKE_DIRECTORY_ACTION, file);
-                return ((Boolean) AccessController.doPrivileged(actions, m_acc))
-                    .booleanValue();
+                return ((Boolean) AccessController.doPrivileged(actions, m_acc));
             }
             catch (PrivilegedActionException ex)
             {
@@ -449,8 +446,7 @@ public class SecureAction
             {
                 Actions actions = (Actions) m_actions.get();
                 actions.set(Actions.MAKE_DIRECTORIES_ACTION, file);
-                return ((Boolean) AccessController.doPrivileged(actions, m_acc))
-                    .booleanValue();
+                return ((Boolean) AccessController.doPrivileged(actions, m_acc));
             }
             catch (PrivilegedActionException ex)
             {
@@ -492,8 +488,7 @@ public class SecureAction
             {
                 Actions actions = (Actions) m_actions.get();
                 actions.set(Actions.RENAME_FILE_ACTION, oldFile, newFile);
-                return ((Boolean) AccessController.doPrivileged(actions, m_acc))
-                    .booleanValue();
+                return ((Boolean) AccessController.doPrivileged(actions, m_acc));
             }
             catch (PrivilegedActionException ex)
             {
@@ -686,8 +681,7 @@ public class SecureAction
             {
                 Actions actions = (Actions) m_actions.get();
                 actions.set(Actions.DELETE_FILE_ACTION, target);
-                return ((Boolean) AccessController.doPrivileged(actions, m_acc))
-                    .booleanValue();
+                return ((Boolean) AccessController.doPrivileged(actions, m_acc));
             }
             catch (PrivilegedActionException ex)
             {
@@ -912,13 +906,13 @@ public class SecureAction
         {
             Method addURL =
                 URLClassLoader.class.getDeclaredMethod("addURL",
-                new Class[] {URL.class});
+                URL.class);
             getAccessor(URLClassLoader.class).accept(new AccessibleObject[]{addURL});
-            addURL.invoke(loader, new Object[]{extension});
+            addURL.invoke(loader, extension);
         }
     }
 
-    public Constructor getConstructor(Class target, Class[] types) throws Exception
+    public Constructor<?> getConstructor(Class<?> target, Class<?>[] types) throws Exception
     {
         if (System.getSecurityManager() != null)
         {
@@ -926,7 +920,7 @@ public class SecureAction
             actions.set(Actions.GET_CONSTRUCTOR_ACTION, target, types);
             try
             {
-                return (Constructor) AccessController.doPrivileged(actions, m_acc);
+                return (Constructor<?>) AccessController.doPrivileged(actions, m_acc);
             }
             catch (PrivilegedActionException e)
             {
@@ -939,7 +933,7 @@ public class SecureAction
         }
     }
 
-    public Constructor getDeclaredConstructor(Class target, Class[] types) throws Exception
+    public Constructor<?> getDeclaredConstructor(Class<?> target, Class<?>[] types) throws Exception
     {
         if (System.getSecurityManager() != null)
         {
@@ -947,7 +941,7 @@ public class SecureAction
             actions.set(Actions.GET_DECLARED_CONSTRUCTOR_ACTION, target, types);
             try
             {
-                return (Constructor) AccessController.doPrivileged(actions, m_acc);
+                return (Constructor<?>) AccessController.doPrivileged(actions, m_acc);
             }
             catch (PrivilegedActionException e)
             {
@@ -960,7 +954,7 @@ public class SecureAction
         }
     }
 
-    public Method getMethod(Class target, String method, Class[] types) throws Exception
+    public Method getMethod(Class<?> target, String method, Class<?>[] types) throws Exception
     {
         if (System.getSecurityManager() != null)
         {
@@ -981,7 +975,7 @@ public class SecureAction
         }
     }
 
-    public Method getDeclaredMethod(Class target, String method, Class[] types) throws Exception
+    public Method getDeclaredMethod(Class<?> target, String method, Class<?>[] types) throws Exception
     {
         if (System.getSecurityManager() != null)
         {
@@ -1067,7 +1061,7 @@ public class SecureAction
         }
     }
 
-    public Object invoke(Constructor constructor, Object[] params) throws Exception
+    public Object invoke(Constructor<?> constructor, Object[] params) throws Exception
     {
         if (System.getSecurityManager() != null)
         {
@@ -1088,7 +1082,7 @@ public class SecureAction
         }
     }
 
-    public Object getDeclaredField(Class targetClass, String name, Object target)
+    public Object getDeclaredField(Class<?> targetClass, String name, Object target)
         throws Exception
     {
         if (System.getSecurityManager() != null)
@@ -1112,8 +1106,8 @@ public class SecureAction
         }
     }
 
-    public Object swapStaticFieldIfNotClass(Class targetClazz,
-        Class targetType, Class condition, String lockName) throws Exception
+    public Object swapStaticFieldIfNotClass(Class<?> targetClazz,
+        Class<?> targetType, Class<?> condition, String lockName) throws Exception
     {
         if (System.getSecurityManager() != null)
         {
@@ -1139,7 +1133,7 @@ public class SecureAction
     private static volatile Consumer<AccessibleObject[]> m_accessorCache = null;
 
     @SuppressWarnings("unchecked")
-    private static Consumer<AccessibleObject[]> getAccessor(Class clazz)
+    private static Consumer<AccessibleObject[]> getAccessor(Class<?> clazz)
     {
         String packageName = clazz.getPackage().getName();
         if ("java.net".equals(packageName) || "jdk.internal.loader".equals(packageName))
@@ -1157,7 +1151,7 @@ public class SecureAction
                     Class<Consumer<AccessibleObject[]>> result;
                     try {
                         Method defineAnonymousClass = unsafeClass.getMethod("defineAnonymousClass", Class.class, byte[].class, Object[].class); //$NON-NLS-1$
-                        result = (Class<Consumer<AccessibleObject[]>>) defineAnonymousClass.invoke(unsafe, URL.class, accessor , null);;
+                        result = (Class<Consumer<AccessibleObject[]>>) defineAnonymousClass.invoke(unsafe, URL.class, accessor , null);
                     }
                     catch (NoSuchMethodException ex)
                     {
@@ -1189,8 +1183,8 @@ public class SecureAction
         }
     }
 
-    private static Object _swapStaticFieldIfNotClass(Class targetClazz,
-        Class targetType, Class condition, String lockName) throws Exception
+    private static Object _swapStaticFieldIfNotClass(Class<?> targetClazz,
+        Class<?> targetType, Class<?> condition, String lockName) throws Exception
     {
 
         Object lock = null;
@@ -1240,12 +1234,11 @@ public class SecureAction
                 if ((condition == null) || !result.getClass().getName().equals(condition.getName()))
                 {
                     // reset cache
-                    for (int i = 0; i < fields.length; i++)
-                    {
-                        if (Modifier.isStatic(fields[i].getModifiers()) &&
-                            (fields[i].getType() == Hashtable.class))
+                    for (Field field : fields) {
+                        if (Modifier.isStatic(field.getModifiers()) &&
+                            (field.getType() == Hashtable.class))
                         {
-                            Hashtable cache = (Hashtable) fields[i].get(null);
+                            Hashtable<?,?> cache = (Hashtable) field.get(null);
                             if (cache != null)
                             {
                                 cache.clear();
@@ -1259,7 +1252,7 @@ public class SecureAction
         return null;
     }
 
-    public void flush(Class targetClazz, Object lock) throws Exception
+    public void flush(Class<?>targetClazz, Object lock) throws Exception
     {
         if (System.getSecurityManager() != null)
         {
@@ -1280,21 +1273,20 @@ public class SecureAction
         }
     }
 
-    private static void _flush(Class targetClazz, Object lock) throws Exception
+    private static void _flush(Class<?>targetClazz, Object lock) throws Exception
     {
         synchronized (lock)
         {
             Field[] fields = targetClazz.getDeclaredFields();
             getAccessor(targetClazz).accept(fields);
             // reset cache
-            for (int i = 0; i < fields.length; i++)
-            {
-                if (Modifier.isStatic(fields[i].getModifiers()) &&
-                    ((fields[i].getType() == Hashtable.class) || (fields[i].getType() == HashMap.class)))
+            for (Field field : fields) {
+                if (Modifier.isStatic(field.getModifiers()) &&
+                    ((field.getType() == Hashtable.class) || (field.getType() == HashMap.class)))
                 {
-                    if (fields[i].getType() == Hashtable.class)
+                    if (field.getType() == Hashtable.class)
                     {
-                        Hashtable cache = (Hashtable) fields[i].get(null);
+                        Hashtable<?,?> cache = (Hashtable) field.get(null);
                         if (cache != null)
                         {
                             cache.clear();
@@ -1302,7 +1294,7 @@ public class SecureAction
                     }
                     else
                     {
-                        HashMap cache = (HashMap) fields[i].get(null);
+                        HashMap<?,?> cache = (HashMap) field.get(null);
                         if (cache != null)
                         {
                             cache.clear();
@@ -1773,7 +1765,7 @@ public class SecureAction
         }
     }
 
-    private static class Actions implements PrivilegedExceptionAction
+    private static class Actions implements PrivilegedExceptionAction<Object>
     {
         public static final int INITIALIZE_CONTEXT_ACTION = 0;
         public static final int ADD_EXTENSION_URL_ACTION = 1;
@@ -1918,7 +1910,8 @@ public class SecureAction
             m_arg6 = null;
         }
 
-        public Object run() throws Exception
+        @Override
+		public Object run() throws Exception
         {
             int action =  m_action;
             Object arg1 = m_arg1;
@@ -1937,15 +1930,15 @@ public class SecureAction
                 case ADD_EXTENSION_URL_ACTION:
                     Method addURL =
                         URLClassLoader.class.getDeclaredMethod("addURL",
-                        new Class[] {URL.class});
+                        URL.class);
                     getAccessor(URLClassLoader.class).accept(new AccessibleObject[]{addURL});
-                    addURL.invoke(arg2, new Object[]{arg1});
+                    addURL.invoke(arg2, arg1);
                     return null;
                 case CREATE_TMPFILE_ACTION:
                     return File.createTempFile((String) arg1, (String) arg2, (File) arg3);
                 case CREATE_URL_ACTION:
                     return new URL((String) arg1, (String) arg2,
-                        ((Integer) arg3).intValue(), (String) arg4,
+                        ((Integer) arg3), (String) arg4,
                         (URLStreamHandler) arg5);
                 case CREATE_URL_WITH_CONTEXT_ACTION:
                     return new URL((URL) arg1, (String) arg2, (URLStreamHandler) arg3);
@@ -1963,14 +1956,14 @@ public class SecureAction
                 case GET_ABSOLUTE_PATH_ACTION:
                     return ((File) arg1).getAbsolutePath();
                 case GET_CONSTRUCTOR_ACTION:
-                    return ((Class) arg1).getConstructor((Class[]) arg2);
+                    return ((Class<?>) arg1).getConstructor((Class<?>[]) arg2);
                 case GET_DECLARED_CONSTRUCTOR_ACTION:
-                    return ((Class) arg1).getDeclaredConstructor((Class[]) arg2);
+                    return ((Class<?>) arg1).getDeclaredConstructor((Class<?>[]) arg2);
                 case GET_DECLARED_METHOD_ACTION:
-                    return ((Class) arg1).getDeclaredMethod((String) arg2, (Class[]) arg3);
+                    return ((Class<?>) arg1).getDeclaredMethod((String) arg2, (Class<?>[]) arg3);
                 case GET_FIELD_ACTION:
-                    Field field = ((Class) arg1).getDeclaredField((String) arg2);
-                    getAccessor((Class) arg1).accept(new AccessibleObject[]{field});
+                    Field field = ((Class<?>) arg1).getDeclaredField((String) arg2);
+                    getAccessor((Class<?>) arg1).accept(new AccessibleObject[]{field});
                     return field.get(arg3);
                 case GET_FILE_INPUT_ACTION:
                     return new FileInputStream((File) arg1);
@@ -1979,7 +1972,7 @@ public class SecureAction
                 case TO_URI_ACTION:
                     return ((File) arg1).toURI();
                 case GET_METHOD_ACTION:
-                    return ((Class) arg1).getMethod((String) arg2, (Class[]) arg3);
+                    return ((Class<?>) arg1).getMethod((String) arg2, (Class<?>[]) arg3);
                 case GET_POLICY_ACTION:
                     return Policy.getPolicy();
                 case GET_PROPERTY_ACTION:
@@ -1991,7 +1984,7 @@ public class SecureAction
                 case GET_URL_INPUT_ACTION:
                     return ((URLConnection) arg1).getInputStream();
                 case INVOKE_CONSTRUCTOR_ACTION:
-                    return ((Constructor) arg1).newInstance((Object[]) arg2);
+                    return ((Constructor<?>) arg1).newInstance((Object[]) arg2);
                 case INVOKE_DIRECTMETHOD_ACTION:
                     return ((Method) arg1).invoke(arg2, (Object[]) arg3);
                 case INVOKE_METHOD_ACTION:
@@ -2019,15 +2012,15 @@ public class SecureAction
                     ((BundleActivator) arg1).stop((BundleContext) arg2);
                     return null;
                 case SWAP_FIELD_ACTION:
-                    return _swapStaticFieldIfNotClass((Class) arg1,
-                        (Class) arg2, (Class) arg3, (String) arg4);
+                    return _swapStaticFieldIfNotClass((Class<?>) arg1,
+                        (Class<?>) arg2, (Class<?>) arg3, (String) arg4);
                 case SYSTEM_EXIT_ACTION:
-                    System.exit(((Integer) arg1).intValue());
+                    System.exit(((Integer) arg1));
                 case FLUSH_FIELD_ACTION:
-                    _flush(((Class) arg1), arg2);
+                    _flush(((Class<?>) arg1), arg2);
                     return null;
                 case GET_CLASS_LOADER_ACTION:
-                    return ((Class) arg1).getClassLoader();
+                    return ((Class<?>) arg1).getClassLoader();
                 case INVOKE_BUNDLE_FIND_HOOK:
                     ((org.osgi.framework.hooks.bundle.FindHook) arg1).find(
                         (BundleContext) arg2, (Collection<Bundle>) arg3);
@@ -2047,7 +2040,7 @@ public class SecureAction
                 case INVOKE_SERVICE_FIND_HOOK:
                     ((org.osgi.framework.hooks.service.FindHook) arg1).find(
                         (BundleContext) arg2, (String) arg3, (String) arg4,
-                        ((Boolean) arg5).booleanValue(),
+                        ((Boolean) arg5),
                         (Collection<ServiceReference<?>>) arg6);
                     return null;
                 case INVOKE_SERVICE_LISTENER_HOOK_ADDED:
